src/index.css
@import "tailwindcss";
@config "../tailwind.config.js";

html {
  scroll-behavior: smooth;
}

body {
  @apply bg-zinc-50 text-zinc-900 dark:bg-darkBg dark:text-zinc-100 transition-colors duration-300;
}

/* Background Pattern Premium */
.bg-grid-pattern {
  background-size: 40px 40px;
  background-image: linear-gradient(to right, rgba(128, 128, 128, 0.07) 1px, transparent 1px), linear-gradient(to bottom, rgba(128, 128, 128, 0.07) 1px, transparent 1px);
  position: relative;
}

.dark .bg-grid-pattern {
  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.08) 1px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.08) 1px, transparent 1px);
}

/* Custom Scrollbar Premium */
::-webkit-scrollbar {
  width: 8px;
}
::-webkit-scrollbar-track {
  background: #f4f4f5; /* zinc-100 */
}
.dark ::-webkit-scrollbar-track {
  background: #09090b; /* darkBg */
}
::-webkit-scrollbar-thumb {
  background: #d4d4d8; /* zinc-300 */
  border-radius: 10px;
}
.dark ::-webkit-scrollbar-thumb {
  background: #3f3f46; /* zinc-700 */
}
::-webkit-scrollbar-thumb:hover {
  background: #a1a1aa; /* zinc-400 */
}

html {
  zoom: 80%; /* Memaksa browser me-render seluruh website di skala 80% */
}

